TAVERNA-893 Update for API changes in download-api